platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam02-ft_bubblesort/runtime/traces/bundle-audit.exams-exam02-ft_bubblesort/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam02-ft_bubblesort/datasets/exercises/exams/exam02/ft_bubblesort/tests/main.c: In function 'main':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam02-ft_bubblesort/datasets/exercises/exams/exam02/ft_bubblesort/tests/main.c:17:18: error: implicit declaration of function 'atoi' [-Werror=implicit-function-declaration]
   17 |         arr[i] = atoi(argv[i + 1]);
      |                  ^~~~
cc1: all warnings being treated as errors
